# gospy-applet

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.in  omf.make
debian/: changelog  control  copyright  rules  watch
gospy-applet.glade/: Makefile.am  gospy-applet.glade.glade
help/C/: Makefile.am  gospy-applet-C.omf  gospy-applet.xml
help/fr/: Makefile.am  gospy-applet-fr.omf  gospy-applet.xml
pixmaps/: Makefile.am
po/: ChangeLog  POTFILES.in  es.po  fr.po  it.po
src/: .indent.pro  GNOME_GospyApplet.xml  GNOME_GospyApplet_Factory.server.in.in  Makefile.am  gospy_applet.c  gospy_applet.h  gospy_applet.schemas.in  gospy_druid.c  gospy_druid.h  gospy_gconf.c  gospy_gconf.h  gospy_process.c  gospy_process.h  gospy_properties.c  gospy_properties.h
src/pixmaps/: Makefile.am
