DIST_PIXMAPS= \
	gospy_applet.png \
	gospy_applet_run.png \
	gospy_applet_changed.png \
	gospy_applet_changed_run.png \
	type_server.png \
	type_server_deactivated.png \
	type_server_run.png \
	type_server_changed.png \
	type_server_changed_run.png \
	type_web_page.png \
	type_web_page_deactivated.png \
	type_web_page_run.png \
	type_web_page_changed.png \
	type_web_page_changed_run.png \
	state_changed.png \
	state_activated.png \
	state_deactivated.png \
	task_running.png \
	task_sleeping.png

EXTRA_DIST=$(DIST_PIXMAPS)

gospy_applet_iconsdir=$(datadir)/pixmaps/$(PACKAGE)
gospy_applet_icons_DATA=$(DIST_PIXMAPS)

clean-local:
	rm -f *~

distclean-local:
